--- a/homework 14/index.html
+++ b/homework 14/index.html
@@ -5,23 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="../homework 15/css/normalize.css" />
+    <link rel="stylesheet" href="../homework 15/css/skeleton.css" />
     <link rel="stylesheet" href="./style.css" />
     <script src="./script.js" async></script>
   </head>
 
   <body>
-    <div class="header">
-      <span>Title</span>
-      <span>Completed</span>
+    <div class="container">
+      <div class="row ">
+        <h3 class="one-half column">Title</h3>
+        <h3 class="one-half column">Completed</h3>
+      </div>
     </div>
-    <table>
-      <tbody>
-        <tr>
-          <td id="title"></td>
-          <td id="completed"></td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="container">
+      <div class="row">
+        <ul id="title" class="one-half column"></ul>
+        <ul id="completed" class="one-half column"></ul>
+      </div>
+    </div>
   </body>
 </html>
