--- a/Lesson 16/index.html
+++ b/Lesson 16/index.html
@@ -1,17 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link rel="stylesheet" href="../common/css/normalize.css" />
+        <link rel="stylesheet" href="../common/css/skeleton.css" />
+        <link rel="stylesheet" href="../common/css/dark-theme.css" />
+        <link rel="stylesheet" href="./styles.css" />
+        <script src="./app.js" async></script>
+        <title>Todo list</title>
+    </head>
+    <body>
+        <div class="container" id="container">
+            <div id="taskList" class="task-list u-full-width">
+                <div class="task-item u-full-width">Hello</div>
+            </div>
+            <form id="addTaskForm">
+                <div class="row">
+                    <div class="ten columns">
+                        <input
+                            type="text"
+                            id="taskNameInput"
+                            class="u-full-width"
+                        />
+                    </div>
+                    <div class="two columns">
+                        <input type="submit" class="u-full-width" value="Add" />
+                    </div>
+                </div>
+            </form>
+        </div>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css" />
-    <script src="./script.js" async></script>
-</head>
-
-<body>
-
-</body>
-
+        <template type="text/template" id="taskItemTemplate">
+            <div class="task-item u-full-width">
+                {{title}}
+            </div>
+        </tempalet>
+    </body>
 </html>
