--- a/homework 17/index.html
+++ b/homework 17/index.html
@@ -14,11 +14,17 @@
 
   <body>
     <div class="container">
-      <div class="header">
-        <input id='addNewSticker' class="u-full-width" type="button" value="Add"></input>
+      <div class="row">
+        <input id='addStickerBtn' class="two-thirds column" type="button" value="Add"></input>
+        <input id='clearAllBtn' class="one-third column" type="button" value="Clear All"></input>
       </div>
-      <div id="areaForStickers">
-      </div>
+      <div id="areaForStickers"></div>
     </div>
+    <script type="text/template" id="stickerTemplate">
+      <div class='sticker' data-sticker-index='{{id}}'>
+        <span class='delete-btn'>X</span>
+        <textarea class='edit-sticker-control' maxlength="108" name="description" id="">{{description}}</textarea>
+      </div>
+    </script>
   </body>
 </html>
