--- a/homework 13/index.html
+++ b/homework 13/index.html
@@ -5,30 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/skeleton.css" />
+    <link rel="stylesheet" href="./css/theme.css" />
+    <link rel="stylesheet" href="./css/Tabset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <script src="./tabset.js" defer></script>
     <script src="./script.js" defer></script>
   </head>
 
   <body>
-    <div id="tabset">
-      <div class="tabset-header">
-        <div class="tabs-titles">
-          <div class="tab-t" data-tab="0">Title 1</div>
-          <div class="tab-t" data-tab="1">Title 2</div>
-          <div class="tab-t" data-tab="2">Title 3</div>
-        </div>
-
-        <div class="buttons">
-          <span><</span>
-          <span>></span>
-        </div>
+    <div id="container">
+      <div class="tabset-element">
+        <div class="tabset-heading">Heading 1</div>
+        <div class="tabset-body">Body 1</div>
       </div>
-
-      <div class="tabs-body">
-        <div class="tab-b" data-tab="0">Content 1</div>
-        <div class="tab-b" data-tab="1">Content 2</div>
-        <div class="tab-b" data-tab="2">Content 3</div>
+      <div class="tabset-element">
+        <div class="tabset-heading">Heading 2</div>
+        <div class="tabset-body">Body 2</div>
+      </div>
+      <div class="tabset-element">
+        <div class="tabset-heading">Heading 3</div>
+        <div class="tabset-body">Body 3</div>
       </div>
     </div>
   </body>
