--- a/hw22/src/index.html
+++ b/hw22/src/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- inject:head:css -->
+    <!-- only importantFile.js will be injected here -->
+    <!-- endinject -->
+
+    <!-- inject:head:js -->
+    <!-- only importantFile.js will be injected here -->
+    <!-- endinject -->
+    <link rel="stylesheet" href="./styles.css" />
+    <script src="./vendors.js"></script>
+    <script src="./all.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div data-nanogallery2 id="galleryContainer"></div>
+    <script type="text/template" id="photoItemTemplate">
+      <a class='forR'></a>
+    </script>
+  </body>
 </html>
